# mnemogram

./: .gitignore  LICENSE  Makefile  NOTES.md  OIDC-DEPLOYMENT-FIX.md  README.md  deployment_trigger.md  pre-deploy.sh
.github/workflows/: ci.yml  deploy.yml  rust-audit.yml
docs/: COST_OPTIMIZATION_ANALYSIS.md  MULTI_REGION_ARCHITECTURE.md  README.md  S3_REGIONAL_CONFIGURATION.md  api-docs.html  api-layer-updates.md  memory-retrieval-api.md  openapi.yaml  rollback-architecture.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: github-oidc-stack.ts  mnemogram-api-stack.ts  mnemogram-stack.ts
lambdas/: Cargo.toml
lambdas/api-cards/: Cargo.toml
lambdas/api-cards/src/: extract_user_id.rs  main.rs
lambdas/api-facts/: Cargo.toml
lambdas/api-facts/src/: extract_user_id.rs  main.rs
lambdas/api-ingest/: Cargo.toml
lambdas/api-ingest/src/: extract_user_id.rs  main.rs
lambdas/api-manage/: Cargo.toml
lambdas/api-manage/src/: main.rs
lambdas/api-search/: Cargo.toml
lambdas/api-search/src/: extract_user_id.rs  main.rs
lambdas/api-state/: Cargo.toml
lambdas/api-state/src/: extract_user_id.rs  main.rs
lambdas/api-status/: Cargo.toml
lambdas/api-status/src/: main.rs
lambdas/authorizer/: Cargo.toml
lambdas/authorizer/src/: main.rs
lambdas/batch-recall/: Cargo.toml
lambdas/batch-recall/src/: extract_user_id.rs  main.rs
lambdas/enrichment/: Cargo.toml
lambdas/enrichment/src/: main.rs
lambdas/ingest/: Cargo.toml
lambdas/ingest/src/: main.rs
lambdas/maintenance/: Cargo.toml
lambdas/maintenance/src/: main.rs
lambdas/recall/: Cargo.toml
lambdas/recall/src/: main.rs
lambdas/search/: Cargo.toml
lambdas/search/src/: main.rs
lambdas/shared/: Cargo.toml
lambdas/shared/src/: auth.rs  errors.rs  lib.rs  logging.rs  memvid.rs  middleware.rs  mv2_cache.rs  usage_tracking.rs  validation.rs
lambdas/sketch-builder/: Cargo.toml
lambdas/sketch-builder/src/: main.rs
lambdas/stripe-webhook/: Cargo.toml
lambdas/stripe-webhook/src/: main.rs
lambdas/validate-upload/: Cargo.toml
lambdas/validate-upload/src/: main.rs
layers/memvid-cli/: README.md  package.json
notes/: export-architecture-decision.md
scripts/: README.md  deploy-api.sh  health-check.sh  migrate-to-s3-vectors.js  rollback-data.sh  rollback-infrastructure.sh  rollback.sh
