[workspace]
members = [
  "shared",
  "authorizer",
  "validate-upload",
  "api-state",
  "api-manage", 
  "batch-recall",
  "sketch-builder",
  "search",
  "recall",
  "api-status",
  "maintenance",
  "stripe-webhook",
  "api-search",
  "enrichment",
  "ingest",
  "api-cards",
  "api-ingest",
  "api-facts"
]

[workspace.dependencies]
aws-sdk-s3 = "1.42.0"
aws-sdk-dynamodb = "1.38.0"
aws-sdk-sqs = "1.0"
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1.0"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
lambda_runtime = "0.12.0"
lambda_http = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
bytes = "1.0"
