[workspace]
resolver = "2"
members = [
  "shared",
  "authorizer",
  "validate-upload",
  "api-state",
  "api-manage", 
  "batch-recall",
  "sketch-builder",
  "search",
  "recall",
  "api-status",
  "maintenance",
  "stripe-webhook",
  "api-search",
  "enrichment",
  "ingest",
  "api-cards",
  "api-ingest",
  "api-facts"
]

[workspace.dependencies]
aws-sdk-s3 = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-bedrockruntime = "1.0"
aws-sdk-s3vectors = "1.0"
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lambda_runtime = "0.8"
lambda_http = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
