[package]
name = "api-state"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.38.0"
aws-sdk-s3 = "1.42.0"
lambda_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tempfile = "3.0"
shared = { path = "../shared" }