[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
jsonwebtoken.workspace = true
chrono.workspace = true
