[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aws-sdk-dynamodb = "1.0"
aws-config = "1.0"
jsonwebtoken = "9.0"