[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
jsonwebtoken.workspace = true