[package]
name = "search"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
shared = { path = "../shared" }