[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
http = ["lambda_http"]

[dependencies]
aws-sdk-s3.workspace = true
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["json"] }
thiserror.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
lambda_runtime = "0.8"
lambda_http = { version = "0.8", optional = true }
chrono = { version = "0.4", features = ["serde"] }
tokio.workspace = true
