[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
http = ["lambda_http"]

[dependencies]
aws-sdk-s3.workspace = true
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
lambda_runtime.workspace = true
lambda_http = { workspace = true, optional = true }
chrono.workspace = true
tokio = { version = "1.0", features = ["process", "io-util"] }
tempfile.workspace = true
bytes.workspace = true
