[package]
name = "sketch-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-sqs = "1.0"
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
shared = { path = "../shared" }
bytes = "1.0"
tempfile = "3.0"