[package]
name = "sketch-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_runtime.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sqs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono.workspace = true
uuid.workspace = true
bytes.workspace = true
tempfile.workspace = true