[package]
name = "stripe-webhook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
lambda_http.workspace = true
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aws-sdk-dynamodb.workspace = true
aws-config.workspace = true
chrono.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"